<resources>
    <string name="app_name">Task Management</string>
    <string name="activity_name_hint">Enter Activity Name</string>
    <string name="screen3_button_text">Add sub-Activity</string>
    <string name="repeat_checkbox_text">Enter Days</string>
    <string name="time_hint">Enter A Time</string>

    //%1$s! The crime was discovered on %2$s, and %3$s, and %4$s
    //For the Main Activity List Items
    <string name="activity_title">%1$s</string>
    <string name="activity_time">$s</string>
    <string name="activity_date">%2$s</string>

    //For the Radio Buttons
    <string name="radio_daily">Daily</string>
    <string name="radio_weekly">Weekly</string>
    <string name="radio_monthly">Monthly</string>
    <string name="radio_custom">Custom</string>
    // New Buttons for the week
    <string name="Sun">Sunday</string>
    <string name="Mon">Monday</string>
    <string name="Tue">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>

    <string name="submit">Add Activity</string>
    <string name="add_task">Adds a new Task to Database</string>
    <string name="app_slogan">Helping you, Mange your activities!</string>
    <string name="Open">Task Management</string>
    <string name="Close">Task Management</string>
    <string name="enter_days">Enter the days for the Task</string>

</resources>